packages/kit/test/apps/basics/src/routes/errors/page-endpoint/post-explicit/+page.server.js
import { error } from '@sveltejs/kit/data';
import { FancyError } from '../_shared.js';

export const POST = () => {
	throw error(400, new FancyError('oops'));
};
